--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ composer.phar
 /debian/tmp/
 /debian/multiflexi-abraflexi-pricefixer.substvars
 /debian/multiflexi-abraflexi-pricefixer.debhelper.log
+/debian/abraflexi-pricefixer.debhelper.log
 /debian/.debhelper/
 /debian/multiflexi-abraflexi-pricefixer/
 /debian/files
