--- a/multiflexi/price_fixer.multiflexi.app.json
+++ b/multiflexi/price_fixer.multiflexi.app.json
@@ -7,9 +7,9 @@
     "cmdparams": "",
     "deploy": "apt install abraflexi-pricefixer",
     "homepage": "https://github.com/VitexSoftware/AbraFlexi-pricefixer",
-    "requirements": "AbraFlexi",
+    "requirements": ["AbraFlexi"],
     "ociimage": "docker.io/vitexsoftware/abraflexi-pricefixer",
-    "topics": "AbraFlexi, Price, Fixer",
+    "topics": ["AbraFlexi", "Price", "Fixer"],
     "uuid": "2a485658-4c14-49de-addd-901d131e669e",
     "environment": {
         "ABRAFLEXI_COMPANY": {
@@ -47,7 +47,13 @@
             "description": "Group of Goods for sets of items",
             "defval": "code:SADA",
             "required": false
+        },
+        "EASE_LOGGER": {
+            "type": "string",
+            "description": "write log messages using",
+            "defval": "console|syslog",
+            "required": false
         }
     },
-    "multiflexi": ""
+    "multiflexi": "core"
 }
