--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: abraflexi-pricefixer
 Section: finance
 Priority: optional
 Maintainer: Vítězslav Dvořák <info@vitexsoftware.cz>
-Build-Depends: debhelper-compat (= 13)
+Build-Depends: debhelper-compat (= 13), jq, moreutils
 Standards-Version: 4.5.1
 Homepage: https://github.com/VitexSoftware/AbraFlexi-pricefixer
 Rules-Requires-Root: no
