--- a/multiflexi/price_fixer.multiflexi.app.json
+++ b/multiflexi/price_fixer.multiflexi.app.json
@@ -1,59 +1,91 @@
 {
-    "image": "",
-    "name": "Price Fixer",
-    "description": "Bundle product price updater for AbraFlexi",
-    "executable": "abraflexi-pricefixer-all",
-    "setup": "abraflexi-pricefixer-init",
-    "cmdparams": "",
-    "deploy": "apt install abraflexi-pricefixer",
-    "homepage": "https://github.com/VitexSoftware/AbraFlexi-pricefixer",
-    "requirements": ["AbraFlexi"],
-    "ociimage": "docker.io/vitexsoftware/abraflexi-pricefixer",
-    "topics": ["AbraFlexi", "Price", "Fixer"],
+    "$schema": "https://raw.githubusercontent.com/VitexSoftware/php-vitexsoftware-multiflexi-core/refs/heads/main/multiflexi.app.schema.json",
+    "schemaVersion": "3.0.0",
     "uuid": "2a485658-4c14-49de-addd-901d131e669e",
+    "name": {
+        "en": "Price Fixer",
+        "cs": "Price Fixer"
+    },
+    "description": {
+        "en": "Bundle product price updater for AbraFlexi",
+        "cs": "Bundle product price updater for AbraFlexi"
+    },
+    "tags": [
+        "AbraFlexi",
+        "Price",
+        "Fixer"
+    ],
+    "homepage": "https://github.com/VitexSoftware/AbraFlexi-pricefixer",
+    "image": "",
+    "ociimage": "docker.io/vitexsoftware/abraflexi-pricefixer",
+    "executable": "abraflexi-pricefixer-all",
     "environment": {
         "ABRAFLEXI_COMPANY": {
             "type": "string",
             "description": "",
             "defval": "demo_de",
-            "required": false
+            "required": false,
+            "category": "API"
         },
         "ABRAFLEXI_LOGIN": {
             "type": "string",
-            "description": "AbraFlexi Login",
+            "description": {
+                "en": "AbraFlexi Login",
+                "cs": "AbraFlexi Login"
+            },
             "defval": "winstrom",
-            "required": false
+            "required": false,
+            "category": "API"
         },
         "ABRAFLEXI_PASSWORD": {
-            "type": "string",
-            "description": "AbraFlexi password",
+            "type": "password",
+            "description": {
+                "en": "AbraFlexi password",
+                "cs": "AbraFlexi password"
+            },
             "defval": "winstrom",
-            "required": false
+            "required": false,
+            "category": "API"
         },
         "ABRAFLEXI_URL": {
             "type": "string",
-            "description": "AbraFlexi Server URI",
-            "defval": "https:\/\/demo.flexibee.eu:5434",
-            "required": false
+            "description": {
+                "en": "AbraFlexi Server URI",
+                "cs": "AbraFlexi Server URI"
+            },
+            "defval": "https://demo.flexibee.eu:5434",
+            "required": false,
+            "category": "API"
         },
         "ABRAFLEXI_PROVIDER": {
             "type": "text",
-            "description": "Default provider for bundle prices",
+            "description": {
+                "en": "Default provider for bundle prices",
+                "cs": "Default provider for bundle prices"
+            },
             "defval": "code:PRICEFIXER",
-            "required": false
+            "required": false,
+            "category": "API"
         },
         "ABRAFLEXI_GROUP": {
             "type": "text",
-            "description": "Group of Goods for sets of items",
+            "description": {
+                "en": "Group of Goods for sets of items",
+                "cs": "Group of Goods for sets of items"
+            },
             "defval": "code:SADA",
-            "required": false
+            "required": false,
+            "category": "API"
         },
         "EASE_LOGGER": {
             "type": "string",
-            "description": "write log messages using",
+            "description": {
+                "en": "write log messages using",
+                "cs": "write log messages using"
+            },
             "defval": "console|syslog",
-            "required": false
+            "required": false,
+            "category": "Behavior"
         }
-    },
-    "multiflexi": "core"
+    }
 }
