Refactors pipeline scripts and improves localization
Modernizes pipeline logic for better readability and reliability,
streamlines artifact handling, and updates package dependencies.

Enhances Czech localization throughout the application descriptor
for improved clarity to Czech users.

--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Description: Product price updater for AbraFlexi
  Bundle product price updater for AbraFlexi
 
 Package: multiflexi-abraflexi-pricefixer
-Depends: abraflexi-pricefixer, multiflexi
+Depends: abraflexi-pricefixer, multiflexi-cli
 Architecture: all
 Section: web
 Priority: optional
